k8s/2nd-brain/karakeep/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: karakeep
  name: karakeep
  namespace: karakeep
spec:
  selector:
    matchLabels:
      app: karakeep
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: karakeep
    spec:
      containers:
        - name: web
          image: ghcr.io/karakeep-app/karakeep:release@sha256:b069e4307dec06ea06d16989c6861c30a1ff208568be44ed5fb5d422cd3e950c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: appdata
        - name: chrome
          image: ghcr.io/karakeep-app/karakeep-chrome:release
          args:
            - --no-sandbox
            - --disable-gpu
            - --disable-dev-shm-usage
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --hide-scrollbars
          ports:
            - containerPort: 9222
              name: chrome-debug
              protocol: TCP
        - name: meilisearch
          image: getmeili/meilisearch:v1.54@sha256:e68913ab7d6f5b159529e472cfd362ce3c741fafd3c127961b2142abbe41b3c9
          ports:
            - containerPort: 7700
              name: meili
              protocol: TCP
          volumeMounts:
            - mountPath: /meili_data
              name: meili-data
      restartPolicy: Always
      volumes:
        - name: appdata
          hostPath:
            path: /config/karakeep
            type: DirectoryOrCreate
        - name: meili-data
          hostPath:
            path: /config/karakeep/meili
            type: DirectoryOrCreate
