k8s/2nd-brain/karakeep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
spec:
  ingressClassName: ingress-nginx-external
  tls:
    - hosts:
        - karakeep.lab.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: karakeep.lab.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep
                port:
                  name: http
